name:                redisweb
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/redisweb#readme
license:             MIT
license-file:        LICENSE
author:              Daniel Choi
maintainer:          dhchoi@gmail.com
copyright:           2016 Daniel Choi
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable redisweb
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , redis
                     , bytestring
                     , text
                     , scotty
                     , wai
                     , warp
                     , transformers
                     , time >= 1.5.0.1
                     , case-insensitive

